[metadata]
name = sdf
description = SubDomainFetcher
long_description = file:README.rst
author = Raiponce
url = https://github.com/r4iponce/sdf
license = sdf
version = 1.0

[options]
include_package_data = True
packages=find:
install_requires =
    requests==2.28.1
    types-requests==2.28.11.2
    pylint==2.15.5
    pre-commit==2.20.0
    isort==5.10.1

[options.entry_points]
console_scripts =
    sdf = sdf.core:main
