[metadata]
name = sdf
description = SubDomainFetcher
long_description = file:README.rst
author = Raiponce
url = https://github.com/r4iponce/sdf
license = sdf
version = 1.0

[options]
include_package_data = True
packages=find:
install_requires =
    requests
    types-requests
    pylint
    pre-commit
    isort

[options.entry_points]
console_scripts =
    sdf = sdf.core:main
